# rig-tests

./: Cargo.toml  ToolPrompt.md
src/: lib.rs  main.rs
src/agent/: agent.rs  mod.rs
src/tools/: link_to_markdown.rs  mod.rs  rest_api.rs  shell_tool.rs  urdu_poem.rs  web_search.rs
