[package]
name = "rig_Test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
rig-core = "*"
serde = "1.0.219"
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.19"
brave-rs = { path = "D:\\git_repos\\brave-rs" }
reqwest = "0.12.23"
schemars = "0.8.22"
tracing = "0.1.41"
clap = { version = "4.5.46", features = ["derive"] }
